x11window: explicitly resize when the Xwayland scale changes

With how Xwayland scaling works, KWin assumes the window already uses the
new coordinate system - but that doesn't happen until Xwayland and the client
know about the new size as well.

BUG: 480642
(cherry picked from commit c2749e3acf974d47127f899549919ae19c9e9719)